src/test/deca/codegen/valid/conditions/whileSimple.deca
// Description :
//    Test de while simple
//
// Resultats :
//    0123456789

{
    int i;

    while (false) {
        println("KO");
    }

    i = 0;
    while (i < 10) {
        print(i);
        i = i + 1;
    }
}