src/test/deca/codegen/invalid/errors/moduloBy0Const.deca
// Description :
//    Test du modulo et du modulo par 0
//
// Resultats :
//    Error: Division by 0

{
    println(1 % 0);
}
